added bottom border for features-section

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -123,7 +123,7 @@
 </section><!--/ TOP SECTION-->
 
 <!-- /RECIPES SECTION-->			
-<section  id="features-section" class="section-2" style="min-height: 0px; ">
+<section  id="features-section" class="section-2" style="min-height: 0px; padding-bottom: 0px; border-bottom: rgb(223, 223, 223); border-bottom-style: inset; border-bottom-width: thin;">
 	<div class="bg-wraper parallax-point-event">
 		<div class="container">
 			<div class="row-fluid">
