--- a/templates/PantryPal_app/index.html
+++ b/templates/PantryPal_app/index.html
@@ -78,7 +78,7 @@
             
                 <a href="#faq" class="btn btn-action">
                     <i class="fa-icon-link"></i> 
-                    Questions? Visit out faq
+                    Questions? Visit out FAQ
                 </a>
             </p>              
         </div><!-- END: portfolio item -->
