--- a/templates/PantryPal_app/index.html
+++ b/templates/PantryPal_app/index.html
@@ -20,33 +20,33 @@
                   <!-- Carousel items -->
                 <div class="carousel-inner">
                     <div class="active item">
-                        <a rel="prettyPhoto[gallery]" href="{% static "img/SnapShot.png" %}" title="portfolio image">
-                            <img src="{% static "img/SnapShot.png" %}" alt="ScrollStrap" />
+                        <a rel="prettyPhoto[gallery]" href="{% static "img/carousel1.png" %}" title="portfolio image">
+                            <img src="{% static "img/carousel1.png" %}" alt="ScrollStrap" />
                         </a>
 
                     </div>
                     <div class="item">
-                        <a rel="prettyPhoto[gallery]" href="{% static "img/SnapShot.png" %}" title="portfolio image">
-                            <img src="{% static "img/SnapShot.png" %}" alt="ScrollStrap" />
+                        <a rel="prettyPhoto[gallery]" href="{% static "img/carousel2.png" %}" title="portfolio image">
+                            <img src="{% static "img/carousel2.png" %}" alt="ScrollStrap" />
                         </a>
                         <div class="carousel-caption">
                             
                                 <p class="">
-                                    <strong><span class="main-color">THIS Bootstrap</span></strong> 
-                                    Carousel integrated with PrettyPhoto jQuery plugin. Just click on photo for enlarge it.         
+                                    <strong><span class="main-color"></span></strong> 
+                                    Your favorite foods however you want them.       
                                     </p>
                             
                         </div>
                     </div>
                     <div class="item">
-                        <a rel="prettyPhoto[gallery]" href="{% static "img/SnapShot.png" %}" title="portfolio image">
-                            <img src="{% static "img/SnapShot.png" %}" alt="ScrollStrap" />
+                        <a rel="prettyPhoto[gallery]" href="{% static "img/carousel3.png" %}" title="portfolio image">
+                            <img src="{% static "img/carousel3.png" %}" alt="ScrollStrap" />
                         </a>
                         <div class="carousel-caption">
                             
                                 <p class="">
-                                    <strong><span class="main-color">THIS Bootstrap</span></strong> 
-                                    Carousel integrated with PrettyPhoto jQuery plugin. Just click on photo for enlarge it.         
+                                    <strong><span class="main-color">PantryPal</span></strong> 
+                                    automatically tells you how many more ingredients you need to complete the recipe!       
                                     </p>
                             
                         </div>
@@ -68,10 +68,10 @@
             </h4>
                             
             <p class="lead">
-                PantryPal lets you take any of the ingredients you can find and make them into something amazing.
+                PantryPal lets you take any of the ingredients you have on hand and make them into something amazing. There are thousands of recipes to choose from, so you can always find something great to create. 
             </p>
             <p class="lead">
-                I need something to put her! Who knows! I will figure it out.
+                Simply list the items you have available in your pantry or refrigerator in the <a href="#header-section">search bar</a>, and in a few seconds you will be on your way! 
             </p>                  
                                 
             <p class="">                                
