updated contact information and bottom section

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -229,12 +229,12 @@
 		<!-- IMAGE CONTAINER-->
             
 				<h3 class="main-color-line">About us</h3>
-				<h4 class="">
+				<h4 class="" style="text-align: justify; ">
 					PantryPal was made by Brent Shulman, a sophmore studying Computer and Cognitive Science at the University of Pennsylvania. He is interested in Artificial Intelligence, Government Contracting, and Human-Computer Interaction. He is an active member of the entrepreneurship community at UPenn and is on the team for a local Philadelphia startup, <a href="http://calccoach.com">CalcCoach</a>. A native Californian, when he is not coding you can find him playing basketball or volleyball.
 				</h4>
 				
 				<h3 class="main-color-line">Our vision</h3>
-				<h4 class="caption-descr"><i class="fa-icon-quote-left main-color"></i>
+				<h4 class="caption-descr" style="text-align: justify; "><i class="fa-icon-quote-left main-color"></i>
 				My sister is an up and coming young chef, mixing and matching ingredients all the time. One day, I saw her looking online at dozens of different website trying to find recipes to fit her ingredients. I made this tool for her and other aspiring chefs.<i class="fa-icon-quote-right main-color"></i>
 				</h4>
 				<h4 class=""> - <strong>Brent Shulman</strong></h4>
@@ -355,35 +355,9 @@
 					<div class="thumbnail" >
 						<!-- CAPTION --> 
 						<div class="caption">
-							<h4 class="">What should I do if I notice a problem with the website</h4>
+							<h4 class="">What should I do if I notice a problem with the website?</h4>
 								<p class="caption-descr">
 								Please contact us below! We love hearing from you. Really.
-								</p>	
-						</div><!--END CAPTION --> 
-					</div><!-- END: THUMBNAIL -->
-				</div><!-- END: portfolio item -->
-				
-					<!-- portfolio item -->
-				<div class="span3  project-item graphics box">
-					<div class="thumbnail" >
-						<!-- CAPTION --> 
-						<div class="caption">
-							<h4 class="">What units is the desired maximum preparation time in?</h4>
-								<p class="caption-descr">
-								The time is in minutes. Additionally, this only a maximum preparation time. If you type 60, some results that only take 10 minues may appear.
-								</p>	
-						</div><!--END CAPTION --> 
-					</div><!-- END: THUMBNAIL -->
-				</div><!-- END: portfolio item -->
-				
-					<!-- portfolio item -->
-				<div class="span3  project-item graphics box">
-					<div class="thumbnail">
-						<!-- CAPTION --> 
-						<div class="caption">
-							<h4 class="">What if i dont type a maximum preparation time?</h4>
-								<p class="caption-descr">
-								There is none! Your results will not be capped by an time restrictions
 								</p>	
 						</div><!--END CAPTION --> 
 					</div><!-- END: THUMBNAIL -->
@@ -419,19 +393,11 @@
     <div class="row-fluid">
 	
      <div class="span3">
-        <h4 class="main-color-line"><i class="fa-icon-comments-alt main-color"></i> <span>What people say</span></h4>
         <blockquote>
 			<p>
-				He promptly completed the task at hand and communicates really well till the project reaches the finishing line.  
+				I am always looking for suggestions and ways to improve PantryPal. Please feel free to reach out to me at any time with your questions, comments, or concerns
 			</p>
-			 <span class="test-caption"> <strong>Steve Kruger UI/UX Designer at Woof Design Studio</strong></span>
-		
-		</blockquote>
-		<blockquote>
-			<p>
-				I was pleased with his creative design and will definitely be hiring him again. 
-			</p>
-			<span class="test-caption"><strong>Steve Kruger UI/UX Designer at Woof Design Studio</strong></span>
+			 <span class="test-caption"> <strong>Brent Shulman</strong></span>
 		
 		</blockquote>
       </div>
@@ -440,20 +406,16 @@
      
 	  
 	<div class="span6">
-	<span class="logo"><!--LOGO-->
-			<a href="#" title="Scroll&amp;Strap">
-				<img src="{% static "img/logo_1_orange.png" %}" alt="logo">
-			</a>
+		<span class="logo" style="margin-top: 20px;"><!--LOGO-->
+			<h1>
+				<span style="font-family: serif; font-weight: 500; /* padding: 20px; */ margin-top: 30px;font-size: 60px;min-height: 600px;" class="active">PANTRY PAL</span>
+			</h1>
 		</span>
 		<hr/>
 			
 			<address>
-				<strong>SCROLL&amp;STRAP, Inc.</strong><br>
-				<i class="fa-icon-map-marker"></i> 795 Folsom Ave, Suite 600
-				San Francisco, CA 94107<br/>
-				<i class="fa-icon-phone-sign"></i> + 4 (123) 456-7890
-				<div class="foot-line"></div>
-									  
+				<a href="mailto:shulmanbrent@gmail.com"><i class="fa-icon-envelope" style="margin-right: 10px; color: white;"></i></a><a href="mailto:shulmanbrent@gmail.com" style="color: white;"><strong>shulmanbrent@gmail.com</strong></a><br>
+				<div class="foot-line"></div>	  
 			</address>
        
 			
@@ -466,33 +428,20 @@
 		<div class="span3">
         <h4 class="main-color-line text-center"><i class="fa-icon-share main-color"></i> <span>Follow us</span></h4>
 			<ul class="social-bottom">
-              <li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-facebook"></i></a></span></li>
-				<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-twitter"></i></a></span></li>
-				<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-github-alt"></i></a></span></li>
-				<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-google-plus"></i></a></span></li>
-				<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-linkedin"></i></a></span></li>
+				<li><span class="badge badge-warning"><a href="https://github.com/shulmanbrent" title=""><i class="fa-icon-github-alt"></i></a></span></li>
+				<li><span class="badge badge-warning"><a href="http://www.linkedin.com/pub/brent-shulman/96/6aa/438/" title=""><i class="fa-icon-linkedin"></i></a></span></li>
 			</ul>
 				
 			
 			
     </div>
-	
-	 <div class="span3">
-        <h4 class="main-color-line"><i class="fa-icon-twitter main-color"></i> <span>Twitter feed</span></h4>
-        <div id="tweets">
-		</div>
-      </div>
 	  
     </div><!-- / ROW-->
     
   </div>
 	
 	</section>
-	<section id="map-section">
-		<!-- MAP DIV // !Don't remove this !Important -->
-			<div id="map"></div>
-	
-	<!-- MAP DIV // !Don't remove this !Important -->
+	<section id="map-section" style="background: url(/static/img/foods.jpg) center center;">
 	</section>
 </footer>
 
