fixed menu bar and stylized yummly attribute

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -57,8 +57,7 @@
                 <li class="active"><a href="#header-section">Home</a> </li>
 				<li><a href="#features-section">Recipes</a> </li>
 				<li><a href="#team-section">About us</a> </li>
-				<li><a href="#portfolio-section">Works</a> </li>
-				<li><a href="#price-section">Price</a> </li>
+				<li><a href="#slogan-section-3">FAQ</a> </li>
 				<li><a href="#contact-section">Contact</a> </li>
               </ul>
             </nav>
@@ -95,7 +94,7 @@
 					            <div>
 					            	<input type="text" size="50" name="query" value="" placeholder="Search recipes with your ingredients..." id="query" class="get_recipes">
 					            </div>
-					            <div style="font-size: 20px; margin-bottom: 10px; color: white; text-shadow: 0 0px 0px #000000;">Ex: bread peanut_butter jelly</div>
+					            <div style="font-size: 20px; margin-bottom: 10px; color: white; text-shadow: 0 0px 4px #000000;">Ex: bread peanut_butter jelly</div>
 					            <div>
 					            	<input type="number" size="50" name="time" value="" placeholder="Maximum preparation time? (optional)" id="time" class="get_recipes">
 					            </div>	
@@ -442,8 +441,8 @@
 	
 	</section>
 	<section id="map-section" style="background: url(/static/img/foods.jpg) center center; padding-top: 50px; ">
-		<div>
-			<h4 style="color: white;">Search results provided by</h4>
+		<div style="text-align: center; ">
+			<h4 style="color: white; ">Search results provided by</h4>
 			<a href="http://www.yummly.com">
 				<img src='http://static.yummly.com/api-logo.png'/>
 			</a>
@@ -506,7 +505,7 @@ jQuery(document).ready(function(){
 	jQuery('#nav4').localScroll(1000);
 	jQuery('#nav5').localScroll(1000);
 	jQuery('.next').localScroll();
-	jquery('.prev').localScroll();
+	jQuery('.prev').localScroll();
 	//.parallax(xPosition, speedFactor, outerHeight) options:
 	//xPosition - Horizontal position of the element
 	//inertia - speed to move relative to vertical scroll. Example: 0.1 is one tenth the speed of scrolling, 2 is twice the speed of scrolling
