--- a/templates/PantryPal_app/index.html
+++ b/templates/PantryPal_app/index.html
@@ -21,13 +21,13 @@
                 <div class="carousel-inner">
                     <div class="active item">
                         <a rel="prettyPhoto[gallery]" href="{% static "img/carousel1.png" %}" title="portfolio image">
-                            <img src="{% static "img/carousel1.png" %}" alt="ScrollStrap" />
+                            <img src="{% static "img/carousel1.PNG" %}" alt="ScrollStrap" />
                         </a>
 
                     </div>
                     <div class="item">
                         <a rel="prettyPhoto[gallery]" href="{% static "img/carousel2.png" %}" title="portfolio image">
-                            <img src="{% static "img/carousel2.png" %}" alt="ScrollStrap" />
+                            <img src="{% static "img/carousel2.PNG" %}" alt="ScrollStrap" />
                         </a>
                         <div class="carousel-caption">
                             
@@ -40,7 +40,7 @@
                     </div>
                     <div class="item">
                         <a rel="prettyPhoto[gallery]" href="{% static "img/carousel3.png" %}" title="portfolio image">
-                            <img src="{% static "img/carousel3.png" %}" alt="ScrollStrap" />
+                            <img src="{% static "img/carousel3.PNG" %}" alt="ScrollStrap" />
                         </a>
                         <div class="carousel-caption">
                             
