changed carousel src to .jpg

--- a/templates/PantryPal_app/index.html
+++ b/templates/PantryPal_app/index.html
@@ -20,14 +20,14 @@
                   <!-- Carousel items -->
                 <div class="carousel-inner">
                     <div class="active item">
-                        <a rel="prettyPhoto[gallery]" href="{% static "img/carousel1.png" %}" title="portfolio image">
-                            <img src="{% static "img/carousel1.PNG" %}" alt="ScrollStrap" />
+                        <a rel="prettyPhoto[gallery]" href="{% static "img/carousel1.jpg" %}" title="portfolio image">
+                            <img src="{% static "img/carousel1.jpg" %}" alt="ScrollStrap" />
                         </a>
 
                     </div>
                     <div class="item">
-                        <a rel="prettyPhoto[gallery]" href="{% static "img/carousel2.png" %}" title="portfolio image">
-                            <img src="{% static "img/carousel2.PNG" %}" alt="ScrollStrap" />
+                        <a rel="prettyPhoto[gallery]" href="{% static "img/carousel2.jpg" %}" title="portfolio image">
+                            <img src="{% static "img/carousel2.jpg" %}" alt="ScrollStrap" />
                         </a>
                         <div class="carousel-caption">
                             
@@ -39,8 +39,8 @@
                         </div>
                     </div>
                     <div class="item">
-                        <a rel="prettyPhoto[gallery]" href="{% static "img/carousel3.png" %}" title="portfolio image">
-                            <img src="{% static "img/carousel3.PNG" %}" alt="ScrollStrap" />
+                        <a rel="prettyPhoto[gallery]" href="{% static "img/carousel3.jpg" %}" title="portfolio image">
+                            <img src="{% static "img/carousel3.jpg" %}" alt="ScrollStrap" />
                         </a>
                         <div class="carousel-caption">
                             
