fixed the none working links

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -506,6 +506,8 @@ jQuery(document).ready(function(){
 	jQuery('#nav5').localScroll(1000);
 	jQuery('.next').localScroll();
 	jQuery('.prev').localScroll();
+	jQuery('.lead').localScroll();
+	jQuery('.go_faq').localScroll();
 	//.parallax(xPosition, speedFactor, outerHeight) options:
 	//xPosition - Horizontal position of the element
 	//inertia - speed to move relative to vertical scroll. Example: 0.1 is one tenth the speed of scrolling, 2 is twice the speed of scrolling
