--- a/templates/PantryPal_app/index.html
+++ b/templates/PantryPal_app/index.html
@@ -74,9 +74,9 @@
                 Simply list the items you have available in your pantry or refrigerator in the <a href="#header-section">search bar</a>, and in a few seconds you will be on your way! 
             </p>                  
                                 
-            <p class="">                                
+            <p class="go_faq">                                
             
-                <a href="#faq" class="btn btn-action">
+                <a href="#slogan-section-3" class="btn btn-action">
                     <i class="fa-icon-link"></i> 
                     Questions? Visit our FAQ
                 </a>
