--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1802,9 +1802,9 @@ FORM.......................................1785
 
 /*********************** FORM *****************************/
 form .get_recipes {
-	width: 30%;
+	width: 100%;
 	height: 40px;
-	min-width: 300px;
+	max-width: 400px;
     background: transparent;
     background: rgba(29, 27, 24, 0.91);
     background-clip: padding-box;
