fixed FAQ typos

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -325,7 +325,7 @@
 					<div class="thumbnail">
 						<!-- CAPTION --> 
 						<div class="caption">
-							<h4 class="">What if i dont type a maximum preparation time?</h4>
+							<h4 class="">What if I don't type a maximum preparation time?</h4>
 								<p class="caption-descr">
 								There is none! Your results will not be capped by any time restrictions.
 								</p>	
@@ -343,7 +343,7 @@
 						<div class="caption">
 							<h4 class="">How are the results organized?</h4>
 								<p class="caption-descr">
-								Your results are organized in order of increasing additional ingredients. That means the easyies recipes for you are first!
+								Your results are organized in order of increasing additional ingredients. That means the easyiest recipes for you are first!
 								</p>	
 						</div><!--END CAPTION --> 
 					</div><!-- END: THUMBNAIL -->
@@ -356,7 +356,7 @@
 						<div class="caption">
 							<h4 class="">What should I do if I notice a problem with the website?</h4>
 								<p class="caption-descr">
-								Please contact us below! We love hearing from you. Really.
+								Please contact us below! We love hearing from you. Really!
 								</p>	
 						</div><!--END CAPTION --> 
 					</div><!-- END: THUMBNAIL -->
