fixed typo in FAQ
easyiest -> easiest

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -354,7 +354,7 @@
 						<div class="caption">
 							<h4 class="">How are the results organized?</h4>
 								<p class="caption-descr">
-								Your results are organized in order of increasing additional ingredients. That means the easyiest recipes for you are first!
+								Your results are organized in order of increasing additional ingredients. That means the easiest recipes for you are first!
 								</p>	
 						</div><!--END CAPTION --> 
 					</div><!-- END: THUMBNAIL -->
