Improved login/register functionality. Ensure that all users must be logged in to use

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -283,7 +283,7 @@
 						<div class="widget_nav_menu"> 
 							<ul class="social-bottom">
 								<li><span class="badge badge-warning"><a href="https://github.com/shulmanbrent" title=""><i class="fa-icon-github-alt"></i></a></span></li>
-								<li><span class="badge badge-warning"><a href="http://www.linkedin.com/pub/brent-shulman/96/6aa/438/" title=""><i class="fa-icon-linkedin"></i></a></span></li>
+								<li><span class="badge badge-warning"><a href="http://www.linkedin.com/in/shulmanbrent" title=""><i class="fa-icon-linkedin"></i></a></span></li>
 							</ul>
 											
 						</div>
