--- a/templates/PantryPal_app/search.html
+++ b/templates/PantryPal_app/search.html
@@ -1,53 +1,57 @@
 {% load static %}
 
+{% if user.is_authenticated %}
 <!-- Display search results in an ordered list -->
-<div class="row-fluid">
-{% if result_list %}
-
-    {% for result in result_list %}
-    <div class="span3 effect-box-1 active">
-        <span class="label label-warning lines-bg-color text-center" style="padding: 0px; background:transparent;">
-            <div class="needed">
-                <p>{{ result.neededIngrCount }} additional item(s) needed!</p>
-            </div>            
-            <a href="{{ result.sourceUrl }}" style="z-index: 2">
-                <img src="{{ result.imageUrl }}" style="min-width: 100%; border-radius: 30px;">
-            </a>
-        </span>
-        <h4 class="features-title" style="text-align: center;"> 
-            {{ result.name }}
-        </h4>
-        <ul>
-            {% for ingredient in result.ingredients %}
-            <li>{{ ingredient }}</li>
-            {% endfor %}
-        </ul>
-    </div><!-- END FEATURE ITEM-->
-    <!-- {# if the the forloop counter is divisible by 4, close the <div> tag and open a new one #} -->
-    {% if forloop.counter|divisibleby:4 %}
-    </div>
     <div class="row-fluid">
-    {% endif %}
+    {% if result_list %}
 
-    {% endfor %}
+        {% for result in result_list %}
+        <div class="span3 effect-box-1 active">
+            <span class="label label-warning lines-bg-color text-center" style="padding: 0px; background:transparent;">
+                <div class="needed">
+                    <p>{{ result.neededIngrCount }} additional item(s) needed!</p>
+                </div>            
+                <a href="{{ result.sourceUrl }}" style="z-index: 2">
+                    <img src="{{ result.imageUrl }}" style="min-width: 100%; border-radius: 30px;">
+                </a>
+            </span>
+            <h4 class="features-title" style="text-align: center;"> 
+                {{ result.name }}
+            </h4>
+            <ul>
+                {% for ingredient in result.ingredients %}
+                <li>{{ ingredient }}</li>
+                {% endfor %}
+            </ul>
+        </div><!-- END FEATURE ITEM-->
+        <!-- {# if the the forloop counter is divisible by 4, close the <div> tag and open a new one #} -->
+        {% if forloop.counter|divisibleby:4 %}
+        </div>
+        <div class="row-fluid">
+        {% endif %}
 
+        {% endfor %}
+
+    {% else %}
+        <div class="well">
+            <div class="well-wrapp">
+                <p class="lead text-large text-center">
+                    Sorry! we cant find anything that includes all those ingredients.
+                </p>
+                <p class="lead text-large text-center">
+                    Go up to give it another try!
+                </p>
+                <p class="lead text-small" style="text-decoration: underline;">Some of the following changes may help</p>
+                <ul style="font-size: large;" >
+                    <li>Check spelling!</li>
+                    <li>Try more general keywords.</li>
+                    <li>Simplify your search.</li>
+                </ul>           
+            </div>  
+        </div>
+    {% endif %} 
+
+    </div><!-- /row-fluid -->
 {% else %}
-    <div class="well">
-        <div class="well-wrapp">
-            <p class="lead text-large text-center">
-                Sorry! we cant find anything that includes all those ingredients.
-            </p>
-            <p class="lead text-large text-center">
-                Go up to give it another try!
-            </p>
-            <p class="lead text-small" style="text-decoration: underline;">Some of the following changes may help</p>
-            <ul style="font-size: large;" >
-                <li>Check spelling!</li>
-                <li>Try more general keywords.</li>
-                <li>Simplify your search.</li>
-            </ul>           
-        </div>  
-    </div>
-{% endif %} 
-
-</div><!-- /row-fluid -->
+    <h2>Please <a href="/login/">Login</a> or <a href="/register/">Register</a> to use PantryPal!</h2>
+{% endif %}
