Added secret_settings file

--- a/templates/PantryPal_app/search.html
+++ b/templates/PantryPal_app/search.html
@@ -53,5 +53,5 @@
 
     </div><!-- /row-fluid -->
 {% else %}
-    <h2>Please <a href="/login/">Login</a> or <a href="/register/">Register</a> to use PantryPal!</h2>
+    <h2>Please <a href="PantryPal_app/login/">Login</a> or <a href="PantryPal_app/register/">Register</a> to use PantryPal!</h2>
 {% endif %}
