--- a/templates/PantryPal_app/login.html
+++ b/templates/PantryPal_app/login.html
@@ -1,21 +1,125 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Login</title>
-    </head>
 
-    <body>
-        <h1>Login to PantryPal</h1>
+{% load static %}
 
-        <form id="login_form" method="post" action="/PantryPal_app/login/">
-            {% csrf_token %}
-            Username: <input type="text" name="username" value="" size="50" />
-            <br />
-            Password: <input type="password" name="password" value="" size="50" />
-            <br />
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Pantry Pal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="Brent Shulman">
+    <!-- Le styles -->
+    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
+    <link href="{% static "css/bootstrap-responsive.css" %}" rel="stylesheet">
+    <link href="{% static "css/pricing.css" %}" rel="stylesheet">
+    <!-- !important THIS STYLE CSS ON BOTTOM OF STYLEs LIST-->
+    <link href="{% static "css/style.css" %}" rel="stylesheet">
+    <!-- !important THIS STYLE CSS ON BOTTOM OF STYLEs LIST-->
+    <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet"> 
+    <link href="{% static "css/prettyPhoto.css" %}" rel="stylesheet" type="text/css" />
+    <link href="{% static "js/google-code-prettify/prettify.css" %}" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-            <input type="submit" value="submit" />
-        </form>
 
-    </body>
+    <!-- Google Analytics Code -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-53646754-4', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="{% static "ico/favicon.ico" %}">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static "ico/apple-touch-icon-144-precomposed.png" %}">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "ico/apple-touch-icon-114-precomposed.png" %}">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "ico/apple-touch-icon-72-precomposed.png" %}">
+    <link rel="apple-touch-icon-precomposed" href="{% static "ico/apple-touch-icon-57-precomposed.png" %}">
+</head>
+<body data-spy="scroll" data-target=".scroller-spy" data-twttr-rendered="true">
+
+<!--START MAIN-WRAPPER--> 
+<div class="main-wrapper">
+<!--START MAIN-WRAPPER--> 
+
+<!-- TOP SECTION-->
+<section class="headertop needhead" id="header-section" style="background-image: url({% static "img/jars.jpg" %})">
+
+ <!-- ################-->
+ <!-- START TOP MENU -->
+ <!-- ################-->
+  <nav class="nav-top">
+    <div class="navbar navbar-static-top" id="topnavbar"> 
+      <!-- navbar-fixed-top -->
+      <div class="navbar-inner" id="navbartop">
+        <div class="container"><span id="flag"><a class="brand" href="#header-section"> 
+        <span>Pantry Pal Login</span>
+        <!--<img src="{% static "img/Logo.png" %}" alt="Logo">--></a></span>
+          <div id="main-nav" class="scroller-spy">
+            <nav class="nav-collapse collapse" >
+              <ul class="nav" id="nav">
+                <li class="active"><a href="/">Home</a> </li>
+              </ul>
+            </nav>
+                
+            
+          </div>
+        </div>
+
+                
+      </div>
+    </div>
+  
+   <!-- ################-->
+ <!-- END TOP MENU -->
+ <!-- ################-->       
+    </nav>
+    <!-- END HEADER headertop NAV -->
+
+            
+<!-- HEADER MARKETING SLOGAN-->
+<header class="container">
+    <div class="row-fluid">
+        <div class="wrap-hero">
+            <div class="hero-unit text-center" style="padding: 0px; padding-top=10px; ">
+                
+                    <div class="inner-wrap-hero">
+                     
+                        <span style="font-family: serif; font-weight: 500; padding: 20px; margin-top: 30px;">PANTRY PAL</span>
+                            <br>
+                            <br>
+                            <form id="login_form" method="post" action="/PantryPal_app/login/">
+                                {% csrf_token %}
+                                Username: <input type="text" name="username" value="" size="50" />
+                                <br />
+                                Password: <input type="password" name="password" value="" size="50" />
+                                <br />
+
+                                <input type="submit" value="submit" />
+                            </form>
+                        
+                    </div>
+                <!--<hr class="half">-->
+            <span class="gobottom" id="nav2">
+                    <a href="#features-section" title="">
+                        <i class="fa-icon-chevron-down fa-icon-large"></i>
+                    </a>
+            </span>
+                
+            
+            </div>  
+        </div><!-- / HERO UNIT-->
+    </div><!-- / HERO WRAP-->
+</header><!-- / HEADER MARKETING SLOGAN container-->
+            
+</section><!--/ TOP SECTION-->
+</div>
+</body>
 </html>
