Updated login page look

--- a/templates/PantryPal_app/login.html
+++ b/templates/PantryPal_app/login.html
@@ -51,7 +51,7 @@
 <!--START MAIN-WRAPPER--> 
 
 <!-- TOP SECTION-->
-<section class="headertop needhead" id="header-section" style="background-image: url({% static "img/jars.jpg" %})">
+<section class="headertop needhead" id="header-section">
 
             
 <!-- HEADER MARKETING SLOGAN-->
@@ -70,17 +70,17 @@
                                 <div class="password-container">
                                   <input type="password" placeholder="Password" tabindex="21" name="password">
                                 </div>
-                                <input type="submit" value="submit" />
-                                <!-- <button class="button submit" data-analytics="sign-in" type="submit" value="submit">Log in to PantryPal</button>
-                                 --><!-- <span class="create-account">
-                                  <a data-analytics="create-account" href="https://disqus.com/profile/signup/">Create an Account</a>
+                                <!-- <input type="submit" value="submit" /> -->
+                                <button class="button submit" data-analytics="sign-in" type="submit" value="submit">Login</button>
+<!--                                  <span class="create-account">
+                                  <a data-analytics="create-account" href="PantryPal_app/register">Create an Account</a>
                                 </span> -->
                                 </form>
                             </section>
                         
                     </div>            
             </div>  
-        </div><!-- / HERO UNIT-->
+        </div><!-- / HERO UNIT -->
     </div><!-- / HERO WRAP-->
 </header><!-- / HEADER MARKETING SLOGAN container-->
             
