--- a/static/css/login.css
+++ b/static/css/login.css
@@ -119,9 +119,9 @@ img {
 
 .login, .signup {
     -moz-box-sizing: border-box;
-    background: none repeat scroll 0 0 #FFFFFF;
-    border-radius: 0 0 0 0;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 0 0 0 rgba(0, 0, 0, 0.1);
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.71);
+    border-radius: 10px;
+    /*box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 0 0 0 rgba(0, 0, 0, 0.1);*/
     margin: 0 auto;
     padding: 30px 40px;
     width: 478px;
@@ -130,7 +130,7 @@ form {
     margin-bottom: 0;
 }
 form {
-    margin: 0 0 26px;
+    margin: 0 0 0px;
 }
 
 .login h1, .signup h1 {
@@ -219,8 +219,8 @@ button.submit {
     border-radius: 5px 5px 5px 5px;
     box-shadow: none;
     color: #FFFFFF;
-    float: left;
-    margin-right: 5%;
+/*    float: left;*/
+/*    margin-right: 5%;*/
     padding: 8px 12px;
     width: 47.5%;
 }
